<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.juanjosegallego.lineasalud.registro">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/tituloregistro"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/correo2"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:hint="@string/registro1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <EditText
        android:id="@+id/contraseña2"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:hint="@string/registro2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <EditText
        android:id="@+id/contraseña22"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@color/black"
        android:hint="@string/registro3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button
            android:id="@+id/registro2"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:background="@color/powderblue"
            android:layout_height="wrap_content"
            android:text="@string/registro4"
            android:textColor="@color/black"/>

    </LinearLayout>

