<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.juanjosegallego.lineasalud.login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/titulologin"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <EditText
            android:id="@+id/correo"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:hint="@string/login1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <EditText
            android:id="@+id/contraseña"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColorHint="@color/black"
            android:hint="@string/login2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:id="@+id/inicio"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:background="@color/powderblue"
            android:layout_height="wrap_content"
            android:text="@string/login3"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:id="@+id/registro"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:background="@color/silver"
            android:layout_height="wrap_content"
            android:text="@string/login4"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
