<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juanjosegallego.lineasalud.citas">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agenda1"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <DatePicker
            android:id="@+id/datep"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:calendarViewShown="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:id="@+id/agendaconfirma"
            android:layout_width="230dp"
            android:layout_gravity="center"
            android:background="@color/powderblue"
            android:layout_height="wrap_content"
            android:text="@string/agenda2"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <Button
            android:id="@+id/agendaver"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:background="@color/silver"
            android:layout_height="wrap_content"
            android:text="@string/agenda3"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/cafesalud"/>







    </LinearLayout>


</FrameLayout>
